# leetcode--exercises

./: 1040.py  121.py  137.py  146.py  209.py  319.py  405转成16进制.py  42.py  442.py  567(3).py  641.py  674.py  707.py  713.py  78.py  833.py  836.py  917.py  937.py  CMakeLists.txt  README.md  demo.py  ss.py  位1的个数.py  字符串-strStr.py  字符串-唯一字符.py  字符串-字母异位词.py  字符串-数字翻转.py  字符串-最长公共前缀.py  字符串-验证回文字符串.py  字符串转数字.py  完全平方数.py  拼凑钱币.py  数组-加一.py  数组-数组交集.py  数组-旋转数组.py  数组-最佳的购买股票的时机2.py  数组-有效的数独.py  杨辉三角.py
LeetCode1/: 1.两数之和.cpp  1.两数之和.py  README.md
LeetCode1006/: LeetCode1006.js
LeetCode1029/: LeetCode1029.cpp  README.md
LeetCode1030/: LeetCode1030.cpp  README.md  main.cpp
LeetCode1052/: 1052.js
LeetCode1054/: LeetCode1054.js
LeetCode1143/: LeetCode1143.js
LeetCode121/: LeetCode121-a.cpp  LeetCode121-b.cpp  README.md  main.cpp
LeetCode122/: 122.py
LeetCode125/: 125.py
LeetCode1332/: LeetCode1332.js
LeetCode135/: 135candy.py
LeetCode136/: 136.py
LeetCode137/: 137.py
LeetCode146/: 146.py
LeetCode1471/: LeetCode1471.cpp  README.md
LeetCode1482/: LeetCode1482.js
LeetCode150/: LeetCode150.cpp  LeetCode150.js  README.md
LeetCode152/: 152.py
LeetCode168/: 168.py
LeetCode1697/: LeetCode1697.js
LeetCode1779/: LeetCode1779.js
LeetCode191/: LeetCode191.js
LeetCode216/: 216.py
LeetCode220/: LeetCode220.js
LeetCode25/: 25.py
LeetCode26/: LeetCode26.js
LeetCode263/: LeetCode263.js
LeetCode264/: LeetCode264.js
LeetCode268/: 268.py
LeetCode27/: LeetCode27.js
LeetCode273/: 273.整数转换英文表示.py
LeetCode278/: 278.py
(+42 files in other folders)
