cmake_minimum_required(VERSION 3.10)
project(LeetCode C)

set(CMAKE_C_STANDARD 11)

add_executable(LeetCode
        .idea/codeStyles/Project.xml
        .idea/LeetCode.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        1040.py
        LeetCode/121.py
        LeetCode/122.py
        LeetCode/125.py
        LeetCode/136.py
        LeetCode/137.py
        146.py
        152.py
        168.py
        209.py
        216.py
        LeetCode/25.py
        268.py
        278.py
        319.py
        397.py
        LeetCode/41.py
        LeetCode/42.py
        442.py
        470.py
        482.py
        495.py
        516.py
        "567(2).py"
        "567(3).py"
        567.py
        594.py
        LeetCode/62.py
        LeetCode/63.py
        641.py
        674.py
        707.py
        713.py
        LeetCode/78.py
        833.py
        836.py
        917.py
        937.py
        demo.py
        位1的个数.py
        字符串-strStr.py
        字符串-唯一字符.py
        字符串-字母异位词.py
        字符串-数字翻转.py
        字符串-最长公共前缀.py
        字符串-验证回文字符串.py
        字符串转数字.py
        完全平方数.py
        数组-加一.py
        数组-数组交集.py
        数组-旋转数组.py
        数组-最佳的购买股票的时机2.py
        数组-有效的数独.py)
